firebase-files und geänderte Struktur für firebase

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,14 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-  	<title>Therappy</title>
-		<link rel="stylesheet" href="../static/CSS/body.css" type="text/css">
-		<link rel="stylesheet" href="../static/CSS/dropdown.css" type="text/css">
-		<link rel="stylesheet" href="../static/CSS/button.css" type="text/css">
-		<link rel="stylesheet" href="../static/CSS/datagrid.css" type="text/css">
-		<link rel="stylesheet" href="../static/CSS/navigation_bar.css" type="text/css">
+  		<title>Therappy</title>
+		<link rel="stylesheet" href="static/CSS/body.css" type="text/css">
+		<link rel="stylesheet" href="static/CSS/dropdown.css" type="text/css">
+		<link rel="stylesheet" href="static/CSS/button.css" type="text/css">
+		<link rel="stylesheet" href="static/CSS/datagrid.css" type="text/css">
+		<link rel="stylesheet" href="static/CSS/navigation_bar.css" type="text/css">
 	</head>
-
 	<body>
 
 		<!-- Header-Daten -->
