--- a/HTML/index.html
+++ b/HTML/index.html
@@ -45,7 +45,7 @@
 					<table>
 						<thead>
 							<tr>
-								<th>Therapeut</th>
+								<th>Test</th>
 								<th>Anzahl Termin</th>
 								<th>Anzahl Therapieformen</th>
 								<th>Anzahl Zeiteinheiten</th>
