Javascript in main.js ausgelagert

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="static/CSS/button.css" type="text/css">
 		<link rel="stylesheet" href="static/CSS/datagrid.css" type="text/css">
 		<link rel="stylesheet" href="static/CSS/navigation_bar.css" type="text/css">
+		<script language=“JavaScript“ type=“text/javascript“ src=“main.js“></script>
 	</head>
 	<body>
 
@@ -79,7 +80,7 @@
 			</div>
 		</div>
 
-		<script type="text/javascript">
+<!-- 		<script type="text/javascript">
 			window.onload = fill_month_list;
 
 			var ml = document.getElementById("month_list");
@@ -136,7 +137,7 @@
 				var current_month_text = current_month.text;
 				console.log(current_month_text);
 			};
-		</script>
+		</script> -->
 	</body>
 </html>
 
