--- a/HTML/index.html
+++ b/HTML/index.html
@@ -140,6 +140,9 @@
 				console.log(current_month_text);
 			};
 		</script> -->
+		<h1 id="dbtest"> DB TEST:</h1>
+		<input type "textfield" id="testtext" />
+		<button id="saveButton">Save</button>
 	</body>
 </html>
 
