Revert "Pfad für main.js angepasst"
This reverts commit a96c814b63942f218c91620aae67d2c505fde15d.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="static/CSS/button.css" type="text/css">
 		<link rel="stylesheet" href="static/CSS/datagrid.css" type="text/css">
 		<link rel="stylesheet" href="static/CSS/navigation_bar.css" type="text/css">
-		<script language=“JavaScript“ type=“text/javascript“ src=“./main.js“></script>
+		<script language=“JavaScript“ type=“text/javascript“ src=“main.js“></script>
 		<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-firestore.js"></script>
 	</head>
