--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,7 +17,7 @@
 		<!-- Header-Daten -->
 		<!-- TODO: In eigenes Html oder ähnliches auslagen -->
 		<div class="header" style="position:fixed;margin-left:0;left:0;top:0;height:8.3%;">
-				<img src="../static/images/logo_example.png"/>
+				<img src="./static/images/logo_example.png"/>
 		</div>
 
 		<!-- Navigationsbar-Daten -->
