--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,10 +8,10 @@
 		<link rel="stylesheet" href="static/CSS/button.css" type="text/css">
 		<link rel="stylesheet" href="static/CSS/datagrid.css" type="text/css">
 		<link rel="stylesheet" href="static/CSS/navigation_bar.css" type="text/css">
-		<script src="/__/firebase/7.5.0/firebase.js"></script>
-		<script src="/__/firebase/init.js"></script>
-<!-- 	<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-firestore.js"></script>, -->
+<!-- 	<script src="/__/firebase/7.5.0/firebase.js"></script>
+		<script src="/__/firebase/init.js"></script> -->
+     	<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-firestore.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts.js"></script>
 		
 	</head>
