--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,7 +12,7 @@
 		<script src="/__/firebase/init.js"></script> -->
      	<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-firestore.js"></script>
-		<script defer language="JavaScript" type="text/javascript" src="scripts.js"></script>
+		<script language="JavaScript" type="text/javascript" src="scripts.js"></script>
 		
 	</head>
 	<body>
