--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,7 +12,7 @@
 		<script src="/__/firebase/init.js"></script> -->
      	<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-firestore.js"></script>
-		<script language="JavaScript" type="text/javascript" src="scripts.js"></script>
+		<script language="JavaScript" type="text/javascript" src="bingo.js"></script>
 		
 	</head>
 	<body>
@@ -146,6 +146,7 @@
 		<h1 id="dbtest"> DB TEST:</h1>
 		<input type "textfield" id="testtext" />
 		<button id="saveButton">Save</button>
+		<script src="./firebase.js"></script>
 	</body>
 </html>
 
