DB Laden und Speichern hinzugefügt

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -146,6 +146,7 @@
 		<h1 id="dbtest"> DB TEST:</h1>
 		<input type "textfield" id="testtext" />
 		<button id="saveButton">Save</button>
+		<button id="loadButton">Load</button>
 		<script src="./firebase.js"></script>
 	</body>
 </html>
