Button für Konsolenausgabe aller DB Einträge der Collection Nutzer

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -147,6 +147,7 @@
 		<input type "textfield" id="testtext" />
 		<button id="saveButton">Save</button>
 		<button id="loadButton">Load</button>
+		<button id="allButton">Alle Nutzer ausgeben</button>
 		<script src="./firebase.js"></script>
 	</body>
 </html>
